--- a/index.html
+++ b/index.html
@@ -495,10 +495,10 @@
             <div class="filter-dropdown">
                 <select id="categoryFilter">
                     <option value="all">All Categories</option>
-                    <option value="finance">Finance</option>
-                    <option value="team">Team Data</option>
-                    <option value="project">Project A</option>
-                    <option value="personal">Personal</option>
+                    <option value="finance">entree MP</option>
+                    <option value="team">gestion de gasoil</option>
+                    <option value="project">atachment</option>
+                    <option value="personal">poiantage</option>
                 </select>
             </div>
         </div>
